[project]
name = "hashtag-enricher"
version = "1.1.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
enrich = "hashtag_enricher.enrich:main"

[project.urls]
Repository = "https://github.com/korosu/hashtag-enricher"
Issues = "https://github.com/korosu/hashtag-enricher/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hashtag_enricher"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
